<resources>
    <string name="app_name">Fynd Demo Project</string>
    <string name="retry_string">Retry</string>
    <string name="internal_error">Something went wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_upcoming">Upcoming</string>
    <string name="text_highest_rate">Top Rated</string>
    <string name="text_popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="appTitle">Fynd Project for TMDB</string>
    <string name="Tegline">Tag-line</string>
    <string name="overview">Overview</string>
    <string name="server_error">Server error, kindly retry after some time</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
</resources>